--- a/main.css
+++ b/main.css
@@ -479,6 +479,7 @@
     border-radius: var(--border-radius) 0 0;
   }
 }
+
 :root .membersWrap__90226::before {
   content: "Member list";
   position: absolute;
@@ -488,17 +489,13 @@
   height: 60px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start; /* Change this line to align content to the left */
   font-size: 20px;
   font-weight: bolder;
   color: var(--header-primary);
   background-color: var(--background-secondary);
   border-radius: var(--border-radius) var(--border-radius) 0 0;
-
-  /* ทำการย้ายไปทางขวาด้วย left */
-  left: 50%; 
-  transform: translateX(-50%);
-} 
+}
 
 :root .membersWrap__90226::after {
   content: "";
